[package]
authors = ["Micah Fitch <micahscopes@gmail.com>"]
edition = "2018"
name = "cobwebs-rs"
version = "0.1.0"
[dependencies]
geo = "*"
im = "*"
js-sys = "*"
petgraph = "*"
rand = { git = "https://github.com/rust-lang-nursery/rand", branch = "0.5" }
rstar = "*"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.63"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile]
[profile.release]
opt-level = "s"

[profile.release.console_error_panic_hook]
optional = true
version = "0.1.6"

[profile.release.wee_alloc]
optional = true
version = "0.4.5"

[profile.release.wee_alloc.wee_alloc]
optional = true
version = "0.4.5"
