[package]
authors = ["Micah Fitch <micahscopes@gmail.com>"]
edition = "2018"
name = "cobwebs-rs"
version = "0.1.0"
[dependencies]
bimap = "*"
cached = "*"
console_log = "*"
delegate = "*"
fixed = "*"
geo = "*"
im = "*"
itertools = "*"
js-sys = "*"
line_intersection = "*"
log = "*"
num-traits = "*"
petgraph = "*"
rayon = "*"
rstar = "*"
web-sys = "*"
web_worker = "*"

[dependencies.arraystring]
features = ["serde-traits"]
version = "*"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.ordered-float]
features = ["serde"]
version = "*"

[dependencies.rand]
branch = "0.5"
git = "https://github.com/rust-lang-nursery/rand"

[dependencies.rust_decimal]
features = ["serde-float"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.63"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile]
[profile.release]
opt-level = "s"

[profile.release.console_error_panic_hook]
optional = true
version = "0.1.6"

[profile.release.wee_alloc]
optional = true
version = "0.4.5"

[profile.release.wee_alloc.wee_alloc]
optional = true
version = "0.4.5"
